modified login page

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,6 +2,6 @@
     <p>Username:<br>
     <input type="text" name="username"></p>
     <p>Password:<br>
-    <input type="text" name="password"></p>
+    <input type="password" name="password"></p>
     <input type="submit" name="Log in">
 </form>
