--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono">
+    <link rel="picture" type="img" href="{{ url_for('static', filename='images/sword_pixel.png')}}">
 </head>
 <body>
     <h1> IdleScape </h1>
