--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,8 @@ body {
 
 .skill_name {
     display: block;
-    text-align: right;
+    /* text-align: center; */
+    text-align: left;
     font-size: 22px;
 }
 
