--- a/static/style.css
+++ b/static/style.css
@@ -100,6 +100,25 @@ a:visited {
 
 }
 
+.skillInfo {
+    visibility: hidden;
+    border: solid;
+    position: absolute;
+    background-image: inherit;
+    background-size: inherit;
+    background-position-x: -5em;
+    background-position-y: inherit;
+
+    /* left: 26em;
+    bottom: 44em; */
+    left: 26.5em;
+    top: 5.5em;
+    border: inherit;
+    border-radius: inherit;
+    padding-right: 1em;
+    padding-left: 1em;
+}
+
 
 .stats {
     display: block;
@@ -149,7 +168,7 @@ a:visited {
 }
 
 .sprites:hover {
-    border: 5px solid rgb(239, 239, 239);
+    border: 0.4em solid rgb(239, 239, 239);
 }
 
 .sprites-agility {
