--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -136,7 +136,7 @@ Main menu
                         let currentLevel = data.currentLevel;
                         let totalExperience = data.totalExperience;
                         let experienceRate = data.experienceRate;
-                        skillInfo.innerHTML = "<p>" + skillName + "</p>" +
+                        skillInfo.innerHTML = "<h2>" + skillName + "</h2>" +
                             "<p>Current level: " + currentLevel + "</p>" +
                             "<p>Total experience: " + totalExperience + "</p>" +
                             "<p>Current experience rate: " + experienceRate + " xp" +
