Change font for skill info popup

--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -114,7 +114,7 @@ Main menu
             function showSkillInfoPopup() {
                 if (!isSkillInfo) {
                     box.style.borderTopRightRadius = '0em';
-                    skillInfo.innerHTML = "<p>click the skill image</p><p>to show more info</p>";
+                    skillInfo.innerHTML = "<h2>Click to show more info<h2>";
                     skillInfo.style.visibility = 'visible';
                 }
             }
