Fix experience info

--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -94,7 +94,7 @@ Main menu
 
 
         <span class="left_level">Level:</span><span class="right_level">{{ skill.level }}</span>
-        <span class="left_experience">Exp left:</span><span class="right_experience">{{ skill.experience }}</span>
+        <span class="left_experience">Exp:</span><span class="right_experience">{{ skill.experience }}</span>
         <!-- </div> -->
     </span>
 
